updated with 2 exercises: 1) Access Carpark API, 2) Use Redis to store Person info)

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,16 @@
 spring.application.name=day18
+
+server.port=4000
+
+spring.data.redis.host=localhost
+
+spring.data.redis.port=6379
+
+spring.data.redis.database=0
+
+spring.data.redis.username=
+
+spring.data.redis.password=
+
+# Local URL to get API from Rest Controller
+spring.data.local.api.url=http://localhost:4000/api/carparks
